--- a/src/AnyStatus/Features/ToolWindow/ContextMenus/ItemContextMenu.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ContextMenus/ItemContextMenu.xaml
@@ -5,7 +5,7 @@
                     xmlns:imaging="clr-namespace:Microsoft.VisualStudio.Imaging;assembly=Microsoft.VisualStudio.Imaging"
                     xmlns:local="clr-namespace:AnyStatus;assembly=AnyStatus">
 
-    <ContextMenu x:Key="ItemContextMenu">
+    <ContextMenu x:Key="ItemContextMenu" FlowDirection="LeftToRight">
         
         <ContextMenu.Resources>
             <local:HasTasksConverter x:Key="HasTasksConverter"/>
