--- a/src/AnyStatus/Features/ToolWindow/ContextMenus/ItemContextMenu.xaml
+++ b/src/AnyStatus/Features/ToolWindow/ContextMenus/ItemContextMenu.xaml
@@ -192,7 +192,7 @@
 
         <Separator/>
 
-        <MenuItem Header=" Delete" 
+        <MenuItem Header=" Remove" 
                   InputGestureText="Del"
                   Command="{Binding Path=PlacementTarget.Tag.DataContext.DeleteCommand, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=ContextMenu}}"
                   CommandParameter="{Binding}">
